test/libsolidity/syntaxTests/inlineAssembly/returndatasize_as_variable_read_post_byzantium.sol.sol
contract C {
    function f() public pure {
        uint returndatasize;
        returndatasize;
        assembly {
            let x := returndatasize
        }
    }
}
// ====
// EVMVersion: >=byzantium
// ----
// ParserError 7104: (137-151='returndatasize'): Builtin function "returndatasize" must be called.
